--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.46.4",
     "@react-three/fiber": "^8.9.1",
     "@types/node": "18.11.10",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "@types/three": "^0.146.0",
     "axios": "^1.2.1",
     "next": "13.0.5",
     "react": "18.2.0",
